@@ -52,9 +52,6 @@ PITHOS_RADOS_POOL_BLOCKS         None                                           
 PITHOS_RADOS_POOL_MAPS           None                                                               RADOS pool to be used for maps storage
 PITHOS_TRANSLATE_UUIDS           False                                                              Enables a ui compatibility layer for the introduction of UUIDs in identity management.
 PITHOS_PROXY_USER_SERVICES       True                                                               Whether to proxy user feedback and catalog services
-PITHOS_USER_CATALOG_URL          \https://<astakos.host>/user_catalogs/                             Astakos User Catalog URL
-PITHOS_USER_FEEDBACK_URL         \https://<astakos.host>/feedback/                                  Astakos User Feedback URL
-PITHOS_USER_LOGIN_URL            \https://<astakos.host>/login/                                     Astakos User Login URL
 PITHOS_USE_QUOTAHOLDER           True                                                               Enable quotaholder
 PITHOS_QUOTAHOLDER_URL           ''                                                                 Quotaholder URL
 PITHOS_QUOTAHOLDER_TOKEN         ''                                                                 Quotaholder token
