@@ -41,9 +41,6 @@
 # Set to False if snf astakos-app is running on the same machine, so it handles
 # the requests on its own.
 #PROXY_USER_SERVICES = True
-#PITHOS_USER_CATALOG_URL = 'https://accounts.example.synnefo.org/user_catalogs/'
-#PITHOS_USER_FEEDBACK_URL = 'https://accounts.example.synnefo.org/feedback/'
-#PITHOS_USER_LOGIN_URL = 'https://accounts.example.synnefo.org/login/'
 
 # Enable and configure quotaholder
 #PITHOS_USE_QUOTAHOLDER = False
